5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1573_1333.log
== SUBMITION (2019-03-11 15:31:51) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.134169
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:39) 
-- CODE:
expressao = 30 – (3 ** 2) + 8 // (3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.183655
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 (3 ** 2) + 8 // (3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:42) 
-- CODE:
expressao = 30 – (3 ** 2) + 8 // (3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.162409
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 (3 ** 2) + 8 // (3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:00) 
-- CODE:
expressao = (30 – (3 ** 2) + 8 )// (3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.154335
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = (30 \u2013 (3 ** 2) + 8 )// (3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:30) 
-- CODE:
expressao = (30 – (3 ** 2) + 8 )// (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME:
0.214696
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = (30 \u2013 (3 ** 2) + 8 )// (3 ** 2) * 10
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:09) 
-- CODE:
expressao = 30 – (3 ** 2) + 8 // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME:
0.211749
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 30 \u2013 (3 ** 2) + 8 // (3 ** 2) * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:41) 
-- CODE:
expressao = 30 - (3 ** 2) + 8 // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME:
0.165967
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
